[package]
name = "build-parallel"
version = "0.1.0"
authors = ["Jeff Muizelaar <jrmuizel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jobserver = "0.1.19"
num_cpus = "1.12.0"
crossbeam-utils = "0.7.0"
